--- a/majin_style/index.html
+++ b/majin_style/index.html
@@ -366,7 +366,7 @@ b. カスタム生成の場合
       let apiMethod;
       if (buttonId === "test-generate") {
         console.log("テスト生成を実行");
-        apiMethod = "mainCustom"; // カスタム生成用のGoogle Apps Script関数
+        apiMethod = "mainTest"; // 単一ルート: テスト生成
       } else {
         console.error("不明なボタンIDです");
         if (loadingElement) {
