update: テスト生成成功

--- a/majin_style/index.html
+++ b/majin_style/index.html
@@ -366,7 +366,7 @@ b. カスタム生成の場合
       let apiMethod;
       if (buttonId === "slide-generate") {
         console.log("スライド生成を実行");
-        apiMethod = "mainTest"; // 単一ルート: スライド生成
+        apiMethod = "runGeneration"; // 単一ルート: スライド生成
       } else {
         console.error("不明なボタンIDです");
         if (loadingElement) {
