update: フォント追加

--- a/new_app/index.html
+++ b/new_app/index.html
@@ -515,32 +515,28 @@
             <div class="form-group">
               <label for="font-family">フォント:</label>
               <select id="font-family" class="select-input" onchange="handleFontFamilyChange()">
-                <option value="Helvetica Neue">Helvetica Neue（デフォルト）</option>
-                <option value="Reddit Sans">Reddit Sans</option>
-                <option value="Inter">Inter</option>
-                <optgroup label="日本語フォント（ビジネス → フランク）">
-                  <option value="BIZ UDPGothic">BIZ UDPGothic</option>
-                  <option value="Noto Sans JP">Noto Sans JP</option>
-                  <option value="IBM Plex Sans JP">IBM Plex Sans JP</option>
-                  <option value="Zen Kaku Gothic New">Zen Kaku Gothic New</option>
-                  <option value="Noto Serif JP">Noto Serif JP</option>
-                  <option value="Zen Kaku Gothic Antique">Zen Kaku Gothic Antique</option>
-                  <option value="M PLUS 1p">M PLUS 1p</option>
-                  <option value="Shippori Mincho">Shippori Mincho</option>
-                  <option value="Murecho">Murecho</option>
-                  <option value="Zen Maru Gothic">Zen Maru Gothic</option>
-                  <option value="M PLUS Rounded 1c">M PLUS Rounded 1c</option>
-                  <option value="Kaisei Opti">Kaisei Opti</option>
-                  <option value="Hina Mincho">Hina Mincho</option>
-                  <option value="Kaisei Decol">Kaisei Decol</option>
-                  <option value="Dela Gothic One">Dela Gothic One</option>
-                </optgroup>
+                <option value="BIZ UDPGothic">BIZ UDPGothic</option>
+                <option value="Noto Sans JP">Noto Sans JP</option>
+                <option value="IBM Plex Sans JP">IBM Plex Sans JP</option>
+                <option value="Zen Kaku Gothic New">Zen Kaku Gothic New</option>
+                <option value="Noto Serif JP">Noto Serif JP</option>
+                <option value="Zen Kaku Gothic Antique">Zen Kaku Gothic Antique</option>
+                <option value="M PLUS 1p">M PLUS 1p</option>
+                <option value="Arial">Arial</option>
+                <option value="Shippori Mincho">Shippori Mincho</option>
+                <option value="Murecho">Murecho</option>
+                <option value="Zen Maru Gothic">Zen Maru Gothic</option>
+                <option value="M PLUS Rounded 1c">M PLUS Rounded 1c</option>
+                <option value="Kaisei Opti">Kaisei Opti</option>
+                <option value="Hina Mincho">Hina Mincho</option>
+                <option value="Kaisei Decol">Kaisei Decol</option>
+                <option value="Dela Gothic One">Dela Gothic One</option>
                 <option value="custom">その他（カスタム入力）</option>
               </select>
               <input
                 type="text"
                 id="custom-font-family"
-                placeholder="フォントファミリー名を入力"
+                placeholder="フォントファミリー名を正確に入力"
                 class="text-input"
                 style="display: none; margin-top: 8px;"
               />
