fix: URL埋め込み正常化

--- a/new_app/index.html
+++ b/new_app/index.html
@@ -735,7 +735,7 @@
           showCustomAlert("スライド生成が完了しました！");
           // リンクを更新
           if (linkButton) {
-            linkButton.onclick = () => window.open(response.url, "_blank"); // リンクをGoogle Apps Scriptの結果に設定
+            linkButton.onclick = () => window.open(response, "_blank"); // リンクをGoogle Apps Scriptの結果に設定
             linkButton.style.display = "inline-flex";
           }
         })
