update: ボタンデザイン変更

--- a/new_app/index.html
+++ b/new_app/index.html
@@ -565,7 +565,7 @@
             <!-- headerLogoUrl -->
             <div class="form-group">
               <label for="header-logo-url">ヘッダーロゴURL: 
-                <button type="button" onclick="setToppanLogoUrl('header-logo-url')" style="background:none;border:none;color:#145599;text-decoration:underline;cursor:pointer;font-size:0.7rem;margin-left:5px;">TOPPANロゴを使用</button>
+                <button type="button" onclick="setToppanLogoUrl('header-logo-url')" style="background:#145599;border:none;color:white;cursor:pointer;font-size:0.7rem;padding:4px 8px;border-radius:4px;float:right;margin-left:10px;">TOPPANロゴを使用</button>
               </label>
               <input 
                 type="url" 
@@ -578,7 +578,7 @@
             <!-- closingLogoUrl -->
             <div class="form-group">
               <label for="closing-logo-url">最終スライドロゴURL: 
-                <button type="button" onclick="setToppanLogoUrl('closing-logo-url')" style="background:none;border:none;color:#145599;text-decoration:underline;cursor:pointer;font-size:0.7rem;margin-left:5px;">TOPPANロゴを使用</button>
+                <button type="button" onclick="setToppanLogoUrl('closing-logo-url')" style="background:#145599;border:none;color:white;cursor:pointer;font-size:0.7rem;padding:4px 8px;border-radius:4px;float:right;margin-left:10px;">TOPPANロゴを使用</button>
               </label>
               <input 
                 type="url" 
