update: エンハンス生成実装

--- a/new_app/index.html
+++ b/new_app/index.html
@@ -149,7 +149,7 @@
       background-color: #ffdd00;
       color: #111;
       font-weight: bold;
-      margin-top: 20px;
+      margin-top: 8px;
       display: none;
     }
 
@@ -605,7 +605,11 @@
     2. 生成AIでできる10のこと
     文章作成
     アイディア出し
-  ..."
+  ...
+  
+  「そのまま生成」　: 入力した文章構成に忠実に従ってスライドとして生成します。 
+  「エンハンス生成」: 入力内容をプレゼンテーション用にブラッシュアップしてからスライド生成されます。
+  "
   ></textarea>
 </div>
 </form>
@@ -713,11 +717,19 @@
       <div class="btn-area-center">
         <button
           type="submit"
+          id="enhance-generate"
+          class="submit-btn"
+          onclick="handleSubmit(event)"
+        >
+          エンハンス生成
+        </button>
+        <button
+          type="submit"
           id="slide-generate"
           class="submit-btn"
           onclick="handleSubmit(event)"
         >
-          スライド生成
+          そのまま生成
         </button>
       </div>
 
@@ -802,7 +814,7 @@
     const progressMessages = [
       "処理を開始しています...",
       "プロンプトを準備中...",
-      "Gemini APIでスライド構成を作成中...",
+      "Geminiでスライド構成を作成中...",
       "データを検証・正規化中...",
       "プレゼンテーションを生成中...",
       "最終処理中..."
@@ -845,7 +857,7 @@
     }
 
     // スライドデータ生成関数
-    function generateSlideData(userInput, options) {
+    function generateSlideData(userInput, options, generationMode = "standard") {
       const loadingElement = document.getElementById("loading");
       const linkButton = document.getElementById("link-to-slide");
 
@@ -889,14 +901,15 @@
           }
           showCustomAlert(`エラーが発生しました: ${error.message || error}`);
         })
-        .generateSlideData(userInput, options);
+        .generateSlideData(userInput, options, generationMode);
     }
 
     async function handleSubmit(event) {
       event.preventDefault(); // フォーム送信のリロードを防止
 
       // 押されたボタンのIDを取得
-      const buttonId = event.target.id;
+      const buttonElement = event.currentTarget || event.target;
+      const buttonId = buttonElement?.id;
 
       // リンクボタンを非表示
       const linkButton = document.getElementById("link-to-slide");
@@ -937,20 +950,13 @@
       }
 
       // ボタンIDに応じた処理
+      let generationMode = "standard";
       if (buttonId === "slide-generate") {
+        generationMode = "standard";
         console.log("スライド生成を実行");
-        
-        // オプションをオブジェクトにまとめる
-        const options = {
-          primaryColor,
-          footerText,
-          headerLogoUrl,
-          closingLogoUrl,
-          fontFamily
-        };
-
-        // generateSlideData関数を呼び出し
-        generateSlideData(userInput, options);
+      } else if (buttonId === "enhance-generate") {
+        generationMode = "enhanced";
+        console.log("エンハンス生成を実行");
       } else {
         console.error("不明なボタンIDです");
         if (loadingElement) {
@@ -959,6 +965,18 @@
         showCustomAlert("不明な操作が行われました。再度お試しください。");
         return;
       }
+
+      // オプションをオブジェクトにまとめる
+      const options = {
+        primaryColor,
+        footerText,
+        headerLogoUrl,
+        closingLogoUrl,
+        fontFamily
+      };
+
+      // generateSlideData関数を呼び出し
+      generateSlideData(userInput, options, generationMode);
     }
 
     // カスタムアラートを表示する
